# herald

./: .gitignore  CLAUDE.md  README.md  poe_tasks.toml  pyproject.toml
.claude/: learnings.md
.claude/skills/gsm8k-eval/: SKILL.md
.claude/skills/gsm8k-eval/references/: exemplars.md  extraction-code.md
.claude/skills/hazard-survival-modeling/: SKILL.md
.claude/skills/hazard-survival-modeling/references/: evaluation-metrics.md  papers-and-software.md  xgboost-approaches.md
.claude/skills/hf-generate-internals/: SKILL.md
.claude/skills/hf-generate-internals/references/: chat-templates.md  generate-loop.md  kv-cache.md  logits-processors.md  scores-and-logits.md  stopping-criteria.md
.claude/skills/kvpress/: SKILL.md
.claude/skills/pydantic/: SKILL.md
docs/: features-plan.md
models/: metrics.json
models/analysis/: calibration.json  errors.json  importances.json  inference_cost.json  nt_sensitivity_partial.json  per_press.json  per_ratio.json  qualitative.json
scripts/: run_sweep.py
src/herald/: __init__.py  config.py  detectors.py  evaluate.py  experiment.py  features.py  labeling.py  prompts.py  signals.py  tasks.py  train.py
src/herald/analysis/: __init__.py  calibration.py  cli.py  common.py  errors.py  importances.py  inference_cost.py  nt_sensitivity_all.py  per_press.py  per_ratio.py  qualitative.py
tests/: test_config.py  test_detectors.py  test_evaluate.py  test_experiment.py  test_features.py  test_integration.py  test_labeling.py  test_prompts.py  test_signals.py  test_tasks.py  test_train.py
(+4 files in other folders)
